--- a/testapp/public/style.css
+++ b/testapp/public/style.css
@@ -1,15 +1,41 @@
-.logcss {
-  center;
+body {
+  background-image: url('./images/Colorful-Galaxy.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.logoutercss {
   background-color: #300A24;
-  color: white;
   padding: 10px;
-  width: 70%;
-  height: 200px;
-  overflow: auto;
+  width: 80%;
+  height: 80vh;
+  text-align: left;
   border-radius: 20px;
   border-style: inset;
   border-color: gray;
   border-width: 6px;
+}
+
+.logcss {
+  color: white;
+  text-align: left;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+h1 {
+  font-family: Anton;
+  margin: 10px;
+  text-align: center;
+  color: orangered;
+}
+
+logged {
+  color: white;
+  font-family: Consolas;
+  white-space: pre-wrap;
 }
 
 .h3 {
