--- a/testapp/public/nav.css
+++ b/testapp/public/nav.css
@@ -13,7 +13,7 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  font-family: Century Gothic;
+  font-family: Ubuntu;
   transition: 0.3s;
   border-radius: 10px;
   border-style: groove;
