--- a/testapp/public/style.css
+++ b/testapp/public/style.css
@@ -1,6 +1,5 @@
 body {
   background-image: url('./images/Colorful-Galaxy.png');
-  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   min-width: 725px;
@@ -39,6 +38,13 @@ h1 {
   color: orangered;
 }
 
+.subheader {
+  font-family: Anton;
+  margin: 10px;
+  text-align: center;
+  color: darkorange;
+}
+
 logged {
   color: white;
   font-family: Consolas;
@@ -63,4 +69,14 @@ logged {
   bottom: 10px;
   right: 35px;
   font-size: 20px;
+}
+
+.progresscontainer {
+  width: 40%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  padding: 10px;
+}
+.progresscontainer h3 {
+  color: lawngreen;
 }
